Fixed alignment

--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,7 @@
 .top-banner {
     width:90%;
     text-align: center;
+    margin:auto;
 }
 .top-iconleft {
     height:28px;
@@ -166,7 +167,7 @@ li span {
 body {
   position: relative;
   max-width: 360px;
-  max-height: 560px;
+  max-height: 550px;
   width:100%;
   height:100%;
   overflow: hidden;
